# research-navigator

./: .gitignore  pyproject.toml
app/crew/: crew.py
docs/: tach_module_graph.dot
