[project]
name = "research_navigator"
version = "0.1.0"
description = "Research-Navigator using crewAI"
authors = [{ name = "Ranuga Gamage", email = "go2ranuga@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "fastapi[standard]>=0.115.12",
    "langsmith>=0.3.24",
    "loguru",
    "onnxruntime==1.21.1",
    "pydantic>=2.11.3",
    "pydantic-core>=2.14.6,<3.0.0",
    "qdrant-client>=1.13.3",
    "tavily-python>=0.7.2",
]

[project.scripts]
run_crew = "app.crew.crew:run_crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
packages = ["app"]

[tool.crewai]
type = "crew"

[tool.dpy]
entrypoint = "cd app && uv run fastapi dev"

[dependency-groups]
dev = [
    "dockerpyze>=2.1.1"
]
